--- a/config/config.json
+++ b/config/config.json
@@ -3,5 +3,6 @@
   "flag_base_address": "http://localhost:80",
   "flag_file_path": "",
   "data_base_dsn": "",
-  "enable_https": false
+  "enable_https": false,
+  "trusted_subnet": ""
 }
